[package]
name = "zkitaptopdf"
version = "0.1.0"
edition = "2024"
include = ["src/**", "bin/**"]

[dependencies]
anyhow = "1.0.100"
image = "0.25.9"
notify = "8.2.0"
swf = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master", package="swf" }
ruffle_core = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master", package="ruffle_core", features = ["deterministic", "default_font"] }
ruffle_render_wgpu = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master", package="ruffle_render_wgpu", features = ["clap"]}
clap = "4.5.53"
futures = "0.3.31"
